Added simple substitutions to sparql query component (#391)
* Added simple substitutions to sparql query component

* Added new object property to dynamic api ontology

* Fixed java 8 comple issues

---------

Co-authored-by: Georgy Litvinov <georgy.litvinov@tib.eu>